# RHermes

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  build.rs  config.example.toml  config.template.toml  plan.md  session.json  tmpclaude-9818-cwd  todo.md
.codegraph/: daemon.pid
.github/workflows/: ci.yml  release.yml
.reasonix/truncated-results/: 1780205350826-c8c35091-run_command.txt
.workbuddy/memory/: 2026-06-04.md
docs/: CHANGELOG.md  RHermes帮助文档.md  architecture.md  code-review-report.md  edu-connection-plan.md  edu-guide.md  edu-plan.md  edu-teaching-plan.md  plans.md  proxy.md  wechat-setup.md
docs/decisions/: D17-proxy.md
home/: config.toml
plugins/: .gitignore  README.md
plugins/example_hello/: Cargo.toml
plugins/example_hello/src/: lib.rs
resources/: app.rc
src/: api.rs  config.rs  context.rs  cost.rs  debug.rs  dispatcher.rs  init.rs  main.rs  memory.rs  path.rs  repair.rs  skill.rs  tools.rs  tui.rs
src/agent/: curator.rs  event_sink.rs  guardrails.rs  memory.rs  memory_manager.rs  mod.rs  repair.rs  router.rs  session.rs  skill.rs  task.rs
src/api/: mod.rs
src/channel/: manager.rs  mod.rs  types.rs
src/channel/qq/: api.rs  mod.rs
src/channel/telegram/: api.rs  mod.rs  sink.rs
src/channel/web/: mod.rs
src/channel/wechat/: mod.rs
src/channel/wecom/: mod.rs
src/core/: archive.rs  config.rs  context.rs  http_client.rs  mod.rs  path.rs  prefix_cache.rs
src/edu/: auth.rs  course.rs  dashboard.rs  e2e_tests.rs  mod.rs  p2p.rs  reflection.rs  setup.rs  store.rs  teacher.rs
src/gateway/: mod.rs  setup.rs
src/mcp/: adapter.rs  config.rs  import.rs  mod.rs  setup.rs  sse_transport.rs  tool_wrapper.rs  transport.rs
src/provider/: factory.rs  mod.rs  pool.rs  transport.rs
src/scheduler/: mod.rs
src/tools/: builtin.rs  builtin.rs.new  dispatcher.rs  mod.rs  office.rs  registry.rs  wasm_plugin.rs
src/tools/office/: excel.rs  mod.rs  pptx.rs  word.rs
src/tools/search/: baidu.rs  bing.rs  duckduckgo.rs  mod.rs  searxng.rs  serper.rs
src/tui/: channel.rs  markdown.rs  mod.rs  qrcode.rs
