[package]
name = "rhermes"
version = "0.1.0"
edition = "2024"
description = "Reasonix 的省 Token 肌肉 + Hermes 的自进化大脑 + Rust 的零开销骨架"
authors = ["RHermes Contributors"]
license = "MIT"
repository = "https://github.com/rhermes/rhermes"

[dependencies]
dirs = "6.0"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde_json = "1"
unicode-width = "0.2"
futures-util = "0.3"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
rusqlite = { version = "0.32", features = ["bundled", "vtab"] }
chrono = { version = "0.4", features = ["serde"] }
ratatui = "0.29"
crossterm = "0.28"

[dev-dependencies]
tempfile = "3"
