[package]
name = "rhermes"
version = "0.6.5"
edition = "2024"
description = "Reasonix 的省 Token 肌肉 + Hermes 的自进化大脑 + Rust 的零开销骨架"
authors = ["RHermes Contributors"]
license = "MIT"
repository = "https://github.com/rhermes/rhermes"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "socks", "multipart"] }
serde_json = "1"
unicode-width = "0.2"
futures-util = "0.3"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
rusqlite = { version = "0.32", features = ["bundled", "vtab"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
rand = "0.8"
regex = "1"
grep-regex = "0.1"
grep-searcher = "0.1"
ignore = "0.4"
pdf-extract = "0.7"
walkdir = "2"

# Office 文档处理
calamine = "0.26"
rust_xlsxwriter = "0.82"
docx-rs = "0.4"
zip = "2"
quick-xml = "0.36"

scraper = "0.22"
lru = "0.12"
cron = "0.13"
extism = "1.5"

ratatui = "0.29"
crossterm = "0.28"
qrcodegen = "1.8.0"

[build-dependencies]
winresource = "0.1"

[dev-dependencies]
tempfile = "3"
